<resources>
    <string name="app_name">Foxies Store</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="loginTextLogin">Login</string>
    <string name="loginTextPassword">Password</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="popUpExitName">Exit</string>
    <string name="popUpSettingsName">Settings</string>
    <string name="appName">Foxies store</string>
    <string name="popUpSettingsMode">Theme</string>
    <string name="popUpSettingsLanguage">Language</string>
    <string name="userPanel">User panel</string>
    <string name="productPlaceholderName">NAME PRODUCT</string>
    <string name="loginTextHeader">Login to your existing account</string>
    <string name="loginTextRegisterHeader">Create new account</string>
    <string name="productPlaceholderDescription">DESCRIPTION OF PRODUCT</string>
    <string name="popUpSettingsTextSize">Font size</string>
    <string name="loginButtonText">Login</string>
    <string name="loginButtonRegisterText">Register</string>
    <string name="loginButtonNoAccountText">No account?</string>
    <string name="copyrightText">© Foxies and Vivid Media Inc</string>
    <string name="passwordHint">Your password...</string>
    <string name="loginNameHint">Your login...</string>
    <string name="repeatPasswordHint">Repeat password...</string>
    <string name="searchHint">What you searching for?</string>
    <string name="loginTextRepeatPassword">Repeat password</string>
    <string name="shopping_cart_icon_alt">Shopping Cart ICON</string>
    <string name="profile_image_alt">Profile Image</string>
    <string name="settings_icon_alt">Settings Icon</string>
    <string name="cena_display">Price: zł</string>
    <string name="produkt_name">Product</string>
</resources>