<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="692dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="171dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/vivid_media" />

        <!-- Header -->
        <TextView
            android:id="@+id/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/loginTextRegisterHeader"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Login Label -->
        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/loginTextLogin"
            android:textAlignment="center"
            android:textFontWeight="600"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Login EditText -->
        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/loginNameHint"
            android:minHeight="48dp"
            />

        <!-- hasło Label -->
        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/loginTextPassword"
            android:textAlignment="center"
            android:textFontWeight="600"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Hasło edittext -->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/passwordHint"
            android:minHeight="48dp"
            />
        <!-- Powtórz hasło label-->
        <TextView
            android:id="@+id/passwordRepeatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/loginTextRepeatPassword"
            android:textAlignment="center"
            android:textFontWeight="600"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <!-- powtórz hasło EditText -->
        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/repeatPasswordHint"
            android:minHeight="48dp"
            />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_noacc"
            android:onClick="onRegisterClick"
            android:padding="5dp"
            android:text="@string/loginButtonRegisterText"
            android:textColor="#FFFFFF"
            android:textColorHighlight="@color/white"
            android:textSize="@dimen/loginTextSize"
            android:textStyle="bold"

            app:backgroundTint="@null" />

        <!-- Footer -->
        <TextView
            android:id="@+id/footerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textAlignment="center"
            style="@style/copyrightText"
 />


    </LinearLayout>

</LinearLayout>