<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:visibility="visible">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/appName"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Centered Search Bar -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/search_bar_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/searchHint"
            android:inputType="text"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textColorHint="#B0B0B0"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Search Icon"
            android:src="@android:drawable/ic_menu_search"
            app:tint="#000000" />
    </LinearLayout>

    <!-- Centered GridLayout for Products -->
    <ScrollView
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">




    <GridLayout
        android:id="@+id/products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        android:gravity="center"
        android:rowCount="100">



    </GridLayout>

    </ScrollView>
    <!--- stopa nawigacyjna -->


        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="111dp"
            android:layout_marginBottom="-22dp"
            android:background="@drawable/round_navigation_footer"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            >
            <ImageView
                android:id="@+id/image1"
                android:onClick="onShoppingCartClick"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/shopping_cart_icon_alt"
                android:src="@drawable/shopping_cart"
                 />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="90dp"
                android:layout_height="74dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/profile_image_alt"
                android:onClick="onProfileClick"
                android:src="@drawable/profil" />

            <ImageView
                android:id="@+id/settingsImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="12dp"
                android:clickable="true"
                android:contentDescription="@string/settings_icon_alt"
                android:onClick="onSettingsClick"
                android:src="@drawable/settings" />
        </LinearLayout>

    <!-- Footer -->
    <TextView
        android:id="@+id/footerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textAlignment="center"
        style="@style/copyrightText"
        />


</LinearLayout>
